--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,143 @@
-.App {
+body {
+  font-family: Poppins, Arial, sans-serif;
+  background-color: #fff;
+  margin: 0;
+  padding: 0;
+}
+
+.login-container {
+  max-width: 360px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  
+}
+
+
+.logo img {
+  display: block;
+  margin: 0 auto 30px;
+  width: 166.521px;
+height: 51.45px;
+padding-bottom: 30px;
+}
+
+.input-group {
+  position: relative;
+  margin-bottom: 20px;
+
+}
+
+.input-group label {
+  display: block;
+  margin-bottom: 5px;
+  color: var(--text-grey, #3A3A3A);
+  font-size: 14px;
+  font-weight: 500px;
+  line-height: 23.931px; /* 170.937% */
+letter-spacing: 0.28px;
+}
+
+.input-group input {
+  width: 90%;
+  padding: 10px 15px;
+  border-radius: 49.857px;
+  border: 0.997px solid var(--neutral-30, #EEF0F3);
+  color: var(--neutral-40, #949BA6);
+  font-size: 14px;
+}
+
+.eye-icon {
+  width: 23.931px;
+  height: 23.931px;
+  position: absolute;
+  top: 70%;
+  right: 20px;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.forgot-password a{
+  color: var(--Red, #D41F13);
+  font-weight: 600;
+  text-align: right;
+
+  text-decoration: none;
+  font-size: 12px;
+  
+}
+.register {
+
+  font-size: 12px;
+  color: var(--text-grey, #3A3A3A);
+  font-weight: 500;
+}
+
+.register .link {
+  color: var(--Red, #D41F13);
+  text-decoration: none;
+  font-weight: 600;
+  line-height: 171%;
+}
+.btn-login {
+  margin-top: 20px;
+  width: 100%;
+  padding: 15px;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 24.928px;
+background: var(--Red, #D41F13);
+padding: 11.966px 7.977px;
+} 
+
+
+.btn-login {
+  color: #fff;
+  margin-bottom: 20px;
+  border : none;
+}
+
+.btn-login:hover {
+  background-color: rgb(224, 64, 64);
+  font-weight: 200;
+}
+
+.or-divider {
   text-align: center;
+  margin-top: 18px;
+  margin-bottom: 20px;
+  color: #939393;
+  font-size: 12px;
+  font-weight: 500;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn-google {
+ 
+  display: inline block;
+  margin-top: 20px;
+  width: 100%;
+  font-size: 12px;
+  cursor: pointer;  
+  padding: 11.966px 7.977px;
+  color: var(--text-grey, #3A3A3A);
+  border-radius: 62.819px;
+  border: 0.997px solid #EAEAEA;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+padding: 11.966px 7.977px;
+justify-content: center;
+align-items: center;
+gap: 3.989px;
+align-self: stretch;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-google:hover {
+  background-color: #b3b3b3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-google img {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
 }
